--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: 스위스 취리히 한인 천주교회 이영덕 안토니오 신부님 강론말씀 모음
 author:
-  name: "주임신부: 이영덕 안토니오 신부님"
-  email: theoantlee@gmail.com
+  name: Technical support
+  email: kkgs.ch@gmail.com
 description: > # this means to ignore newlines until "show_excerpts:"
   취리히 한인성당의 주임신부님이신 이영덕 안토니오 신부님께서 미사 때 해주신 강론 말씀을 저희 공동체 신자들이 모아두었습니다. 
   We collect here Korean homilies by Father Antonio Lee given during catholic masses in Zurich Switzerland. We cordially invite you to our masses.
