--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,7 @@ author:
   name: Technical support
   email: kkgs.ch@gmail.com
 description: > # this means to ignore newlines until "show_excerpts:"
-  취리히 한인성당의 주임신부님이신 이영덕 안토니오 신부님께서 미사 때 해주신 강론 말씀을 저희 공동체 신자들이 모아두었습니다. 
-  We collect here Korean homilies by Father Antonio Lee given during catholic masses in Zurich Switzerland. We cordially invite you to our masses.
+  이영덕 안토니오 신부님께서 미사 때 해주신 강론 말씀을 한인성당 공동체 신자들이 모아두었습니다. 
 show_excerpts: true # set to true to show excerpts on the homepage
 
 # If you want to link only specific pages in your header, uncomment
